--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-fastapi
-uvicorn
-requests
-line-bot-sdk
-python-dotenv
+fastapi==0.121.0
+uvicorn==0.38.0
+requests==2.32.3
+line-bot-sdk==3.21.0
+python-dotenv==1.0.1
